--- a/index.html
+++ b/index.html
@@ -1,78 +1,339 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Character encoding and responsive settings -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Audiobook Progress Tracker</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/lucide@latest/dist/lucide.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+    <style>
+      body {
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+          "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+          "Helvetica Neue", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
 
-  <!-- Page title -->
-  <title>Progress Calculator</title>
+    <script type="text/babel">
+      const { useState, useEffect } = React;
+      // Create icon components manually since Lucide React components don't work in this setup
+      function BookOpenIcon() {
+        return React.createElement(
+          "svg",
+          {
+            className: "mx-auto h-12 w-12 text-indigo-600 mb-3",
+            fill: "none",
+            stroke: "currentColor",
+            strokeWidth: "2",
+            viewBox: "0 0 24 24",
+          },
+          React.createElement("path", {
+            d: "M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z",
+          }),
+          React.createElement("path", {
+            d: "M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z",
+          })
+        );
+      }
 
-  <!-- Google Fonts import (Montserrat and others) -->
-  <link href="https://fonts.googleapis.com/css2?family=Anybody:ital,wdth,wght@0,107.4,100..900;1,107.4,100..900&family=Corben:wght@400;700&family=Lexend+Deca:wght@100..900&family=Montserrat:wght@300&family=Noto+Sans+Warang+Citi&family=Poiret+One&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+      function ClockIcon() {
+        return React.createElement(
+          "svg",
+          {
+            className: "inline h-4 w-4 mr-1",
+            fill: "none",
+            stroke: "currentColor",
+            strokeWidth: "2",
+            viewBox: "0 0 24 24",
+          },
+          React.createElement("circle", { cx: "12", cy: "12", r: "10" }),
+          React.createElement("polyline", { points: "12,6 12,12 16,14" })
+        );
+      }
 
-  <!-- Main stylesheet -->
-  <link rel="stylesheet" href="style.css" />
-</head>
+      function ToggleLeftIcon() {
+        return React.createElement(
+          "svg",
+          {
+            className: "h-8 w-8 text-gray-400",
+            fill: "none",
+            stroke: "currentColor",
+            strokeWidth: "2",
+            viewBox: "0 0 24 24",
+          },
+          React.createElement("rect", {
+            x: "1",
+            y: "5",
+            width: "22",
+            height: "14",
+            rx: "7",
+            ry: "7",
+          }),
+          React.createElement("circle", { cx: "8", cy: "12", r: "3" })
+        );
+      }
 
-<body>
-  <!-- Main container for layout -->
-  <div class="container">
+      function ToggleRightIcon() {
+        return React.createElement(
+          "svg",
+          {
+            className: "h-8 w-8 text-indigo-600",
+            fill: "none",
+            stroke: "currentColor",
+            strokeWidth: "2",
+            viewBox: "0 0 24 24",
+          },
+          React.createElement("rect", {
+            x: "1",
+            y: "5",
+            width: "22",
+            height: "14",
+            rx: "7",
+            ry: "7",
+          }),
+          React.createElement("circle", { cx: "16", cy: "12", r: "3" })
+        );
+      }
 
-    <!-- Left panel: input form for time values -->
-    <div class="form-wrapper expanded" id="formWrapper">
-      <form id="progressForm">
-        <!-- Form title -->
-        <h2>Time Remaining/Completed to Percentage</h2>
+      function AudiobookProgressTracker() {
+        const [totalHours, setTotalHours] = useState("");
+        const [totalMinutes, setTotalMinutes] = useState("");
+        const [inputHours, setInputHours] = useState("");
+        const [inputMinutes, setInputMinutes] = useState("");
+        const [isCompletedMode, setIsCompletedMode] = useState(true);
 
-        <!-- Input for total time -->
-        <label>Total Time:</label>
-        <input type="number" id="totalHours" placeholder="Hours" min="0"/>
-        <input type="number" id="totalMinutes" placeholder="Minutes" min="0" max="59"/>
+        const [results, setResults] = useState({
+          percentage: 0,
+          completedTime: { hours: 0, minutes: 0 },
+          remainingTime: { hours: 0, minutes: 0 },
+          totalMinutes: 0,
+        });
 
-        <!-- Mode toggle buttons -->
-        <div class="toggle-buttons">
-          <button type="button" id="completedBtn" class="active">Completed</button>
-          <button type="button" id="remainingBtn">Remaining</button>
-        </div>
+        const timeToMinutes = (hours, minutes) => {
+          return (parseInt(hours) || 0) * 60 + (parseInt(minutes) || 0);
+        };
 
-        <!-- Input for completed or remaining time -->
-        <label id="inputLabel">Completed Time:</label>
-        <input type="number" id="inputHours" placeholder="Hours" min="0"/>
-        <input type="number" id="inputMinutes" placeholder="Minutes" min="0" max="59"/>
+        const minutesToTime = (totalMinutes) => {
+          const hours = Math.floor(totalMinutes / 60);
+          const minutes = totalMinutes % 60;
+          return { hours, minutes };
+        };
 
-        <!-- Submit button -->
-        <button type="submit">Calculate</button>
-      </form>
-    </div>
+        const formatTime = (hours, minutes) => {
+          return `${hours}h ${minutes}m`;
+        };
 
-    <!-- (Optional) Expand button — currently hidden -->
-    <button id="expandBtn" class="drawer-toggle" title="Expand" style="display: none;">&#xbb;</button>
+        const calculateProgress = () => {
+          const totalMins = timeToMinutes(totalHours, totalMinutes);
+          const inputMins = timeToMinutes(inputHours, inputMinutes);
 
-    <!-- Right panel: progress ring display -->
-    <div class="ring-container" id="ringSection">
-      <div class="ring-wrapper">
-        <!-- SVG ring with 3 layers: background, completed, remaining -->
-        <svg class="progress-ring" width="150" height="150">
-          <circle class="track" r="65" cx="75" cy="75" />
-          <circle class="completed" r="65" cx="75" cy="75" />
-          <circle class="remaining" r="65" cx="75" cy="75" />
-        </svg>
+          if (totalMins === 0) return;
 
-        <!-- Percent text in center of ring -->
-        <span id="percentText" class="ring-percent">0%</span>
-      </div>
+          let completedMins, remainingMins, percentage;
 
-      <!-- Time display under the ring -->
-      <div class="stat-display" id="timeDisplay"></div>
-    </div>
+          if (isCompletedMode) {
+            completedMins = Math.min(inputMins, totalMins);
+            remainingMins = totalMins - completedMins;
+            percentage = (completedMins / totalMins) * 100;
+          } else {
+            remainingMins = Math.min(inputMins, totalMins);
+            completedMins = totalMins - remainingMins;
+            percentage = (completedMins / totalMins) * 100;
+          }
 
-  </div>
+          setResults({
+            percentage: Math.round(percentage * 10) / 10,
+            completedTime: minutesToTime(completedMins),
+            remainingTime: minutesToTime(remainingMins),
+            totalMinutes: totalMins,
+          });
+        };
 
-  <!-- Main JavaScript logic -->
-  <script src="script.js"></script>
+        useEffect(() => {
+          calculateProgress();
+        }, [
+          totalHours,
+          totalMinutes,
+          inputHours,
+          inputMinutes,
+          isCompletedMode,
+        ]);
 
-  <!-- Custom alert popup for errors -->
-  <div id="alertBox" class="alert-box hidden">Input time cannot be more than total time.</div>
-</body>
+        const progressBarWidth = Math.min(results.percentage, 100);
+
+        return (
+          <div className="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-100 p-4">
+            <div className="max-w-md mx-auto bg-white rounded-2xl shadow-xl p-6 space-y-6">
+              <div className="text-center">
+                <BookOpenIcon />
+                <h1 className="text-2xl font-bold text-gray-800 mb-2">
+                  Audiobook Progress
+                </h1>
+                <p className="text-gray-600 text-sm">
+                  Track your listening progress
+                </p>
+              </div>
+
+              <div className="space-y-3">
+                <label className="block text-sm font-medium text-gray-700">
+                  <ClockIcon />
+                  Total Audiobook Time
+                </label>
+                <div className="flex space-x-2">
+                  <div className="flex-1">
+                    <input
+                      type="number"
+                      placeholder="Hours"
+                      min="0"
+                      value={totalHours}
+                      onChange={(e) => setTotalHours(e.target.value)}
+                      className="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-center"
+                    />
+                    <span className="text-xs text-gray-500 block text-center mt-1">
+                      Hours
+                    </span>
+                  </div>
+                  <div className="flex-1">
+                    <input
+                      type="number"
+                      placeholder="Minutes"
+                      min="0"
+                      max="59"
+                      value={totalMinutes}
+                      onChange={(e) => setTotalMinutes(e.target.value)}
+                      className="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-center"
+                    />
+                    <span className="text-xs text-gray-500 block text-center mt-1">
+                      Minutes
+                    </span>
+                  </div>
+                </div>
+              </div>
+
+              <div className="flex items-center justify-center space-x-3 py-2">
+                <span
+                  className={`text-sm font-medium ${
+                    isCompletedMode ? "text-indigo-600" : "text-gray-500"
+                  }`}
+                >
+                  Completed
+                </span>
+                <button
+                  onClick={() => setIsCompletedMode(!isCompletedMode)}
+                  className="focus:outline-none"
+                >
+                  {isCompletedMode ? <ToggleRightIcon /> : <ToggleLeftIcon />}
+                </button>
+                <span
+                  className={`text-sm font-medium ${
+                    !isCompletedMode ? "text-indigo-600" : "text-gray-500"
+                  }`}
+                >
+                  Remaining
+                </span>
+              </div>
+
+              <div className="space-y-3">
+                <label className="block text-sm font-medium text-gray-700">
+                  Time {isCompletedMode ? "Completed" : "Remaining"}
+                </label>
+                <div className="flex space-x-2">
+                  <div className="flex-1">
+                    <input
+                      type="number"
+                      placeholder="Hours"
+                      min="0"
+                      value={inputHours}
+                      onChange={(e) => setInputHours(e.target.value)}
+                      className="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-center"
+                    />
+                    <span className="text-xs text-gray-500 block text-center mt-1">
+                      Hours
+                    </span>
+                  </div>
+                  <div className="flex-1">
+                    <input
+                      type="number"
+                      placeholder="Minutes"
+                      min="0"
+                      max="59"
+                      value={inputMinutes}
+                      onChange={(e) => setInputMinutes(e.target.value)}
+                      className="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-center"
+                    />
+                    <span className="text-xs text-gray-500 block text-center mt-1">
+                      Minutes
+                    </span>
+                  </div>
+                </div>
+              </div>
+
+              {results.totalMinutes > 0 && (
+                <div className="space-y-4 pt-4 border-t border-gray-200">
+                  <div className="text-center">
+                    <div className="text-4xl font-bold text-indigo-600 mb-1">
+                      {results.percentage}%
+                    </div>
+                    <div className="text-sm text-gray-600">Complete</div>
+                  </div>
+
+                  <div className="space-y-2">
+                    <div className="flex justify-between text-xs text-gray-500">
+                      <span>0%</span>
+                      <span>100%</span>
+                    </div>
+                    <div className="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
+                      <div
+                        className="h-full bg-gradient-to-r from-indigo-500 to-purple-600 rounded-full transition-all duration-500 ease-out"
+                        style={{ width: `${progressBarWidth}%` }}
+                      ></div>
+                    </div>
+                  </div>
+
+                  <div className="grid grid-cols-2 gap-4 pt-2">
+                    <div className="text-center p-3 bg-green-50 rounded-lg">
+                      <div className="text-lg font-semibold text-green-700">
+                        {formatTime(
+                          results.completedTime.hours,
+                          results.completedTime.minutes
+                        )}
+                      </div>
+                      <div className="text-xs text-green-600">Completed</div>
+                    </div>
+                    <div className="text-center p-3 bg-orange-50 rounded-lg">
+                      <div className="text-lg font-semibold text-orange-700">
+                        {formatTime(
+                          results.remainingTime.hours,
+                          results.remainingTime.minutes
+                        )}
+                      </div>
+                      <div className="text-xs text-orange-600">Remaining</div>
+                    </div>
+                  </div>
+                </div>
+              )}
+            </div>
+          </div>
+        );
+      }
+
+      ReactDOM.render(
+        <AudiobookProgressTracker />,
+        document.getElementById("root")
+      );
+    </script>
+  </body>
 </html>
