--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
             x2: "19.78",
             y2: "19.78",
           }),
-          React.createElement("line", { x1: "1", y1: "12", x2: "3", y2: "12" }),
+          React.createElement("line", {
+            x1: "1",
+            y1: "12",
+            x2: "3",
+            y2: "12",
+          }),
           React.createElement("line", {
             x1: "21",
             y1: "12",
